--- a/main/server.cfg
+++ b/main/server.cfg
@@ -16,7 +16,7 @@
 //******************************************************************************
 // Public Information
 //******************************************************************************
-sets sv_hostname "My Server Name"
+sets sv_hostname "^1Bot ^3War^5fare ^724/7 Dome 10x"
 sets _admin "My Name"
 sets _website "My URL"
 sets _location "My Location"
@@ -24,26 +24,26 @@ sets _irc ""
 sets _mod ""
 sets _modver ""
 sets _modupdate ""
-set scr_motd "My Message of the Day!"
+set scr_motd "^1Bot ^3War^5fare"
 
 //******************************************************************************
 // Common Server Settings
 //******************************************************************************
 // Password Settings
-set rcon_password "my_rcon_password"
+set rcon_password "qazqaz"
 set sv_privatepassword ""
-set g_password "my_connect_password"
+set g_password ""
+set scr_xpscale_ "10"
 
 // Player slots setup
-set sv_maxclients "24"
-set sv_privateclients "4"
+set sv_privateclients "0"
 
 // Players
 set scr_player_maxhealth "100"
-set scr_player_suicidespawndelay "5"
+set scr_player_suicidespawndelay "0"
 set scr_player_healthregentime "5"
 set scr_player_forcerespawn "1"
-set scr_player_sprinttime "5"
+set scr_player_sprinttime "4"
 set g_allowvote "1"
 set scr_teambalance "0"
 
@@ -54,7 +54,7 @@ set scr_team_kickteamkillers "0"
 
 // Ping
 set sv_minping "0"
-set sv_maxping "500"
+set sv_maxping "0"
 
 // Log Settings
 set g_logsync "1"
@@ -63,15 +63,13 @@ set g_log "games_mp.log"
 set sv_log_damage "1"
 
 // Network options
-set net_port "28960"
 set com_hunkmegs "250"
 set net_noipx "1"
-set dedicated "dedicated internet server"
 
 // Client Download Settings. (0=off/1=on) Used for MODs and custom maps
 set sv_allowdownload "1"
 seta sv_wwwdownload "1"
-seta sv_wwwbaseurl "http://www.codwawserver.com:5000/fastdl"
+seta sv_wwwbaseurl "http://rawcdn.githack.com/ineedbots/www_host/main/t4/"
 seta sv_wwwdldisconnected "1"
 
 // Rate
@@ -83,8 +81,8 @@ set sv_fps "20"
 // Drop inactive players
 set sv_timeout "300"
 set sv_zombietime "1"
-set g_inactivity "0"
-set g_inactivityspectator "0"
+set g_inactivity "180"
+set g_inactivityspectator "180"
 
 // AntiFlooding Settings
 set sv_floodprotect "1"
@@ -94,10 +92,9 @@ set sv_reconnectlimit "3"
 set sv_disableclientconsole "0"
 set cl_autocmd "0"
 set sv_cheats "0"
-set sv_pure "1"
+set sv_pure "0"
 set g_banips ""
 set g_no_script_spam "1"
-set sv_punkbuster "0"
 
 // Temporary Ban duration, in seconds
 set sv_kickbantime "3600"
@@ -135,7 +132,6 @@ set scr_hardpoint_allowdogs "1"
 set sv_allowanonymous "0"
 set g_antilag "1"
 set g_compassshowenemies "0"
-set ui_maxclients "32"
 
 //******************************************************************************
 // Gametypes 
@@ -188,7 +184,7 @@ set twar_momentummax "70"
 
 // DOMINATION
 set scr_dom_scorelimit "300"
-set scr_dom_timelimit "15"
+set scr_dom_timelimit "30"
 set scr_dom_roundlimit "1"
 set scr_dom_numlives "0"
 set scr_dom_playerrespawndelay "0"
@@ -246,7 +242,9 @@ set ui_hud_showobjicons "1"
 //******************************************************************************
 // Map Rotation
 //******************************************************************************
-set sv_maprotation "gametype dm map mp_downfall gametype dm map mp_dome gametype dm map mp_airfield gametype dm map mp_castle gametype dm map mp_courtyard gametype dm map mp_makin_day gametype dm map mphangar gametype dm map mp_suburban gametype dm map mp_makin gametype dm map mp_asylum gametype dm map mp_rondhouse gametype dm map mp_seelow gametype dm map mp_outskirts gametype dm map mp_roundhouse gametype dm map mp_shrine"
+//set sv_maprotation "gametype dm map mp_downfall gametype dm map mp_dome gametype dm map mp_airfield gametype dm map mp_castle gametype dm map mp_courtyard gametype dm map mp_makin_day gametype dm map mphangar gametype dm map mp_suburban gametype dm map mp_makin gametype dm map mp_asylum gametype dm map mp_rondhouse gametype dm map mp_seelow gametype dm map mp_outskirts gametype dm map mp_roundhouse gametype dm map mp_shrine"
+
+set sv_maprotation "gametype dom map mp_dome"
 
 //******************************************************************************
 // Additional DVAR's
@@ -282,3 +280,23 @@ set perk_flakjacket "75"
 set perk_armorvest "75"
 set perk_parabolicicon "specialty_parabolic"
 set perk_parabolicradius "400"
+
+// _bot
+set bot_main "1"
+set bots_main_GUIDs ""
+set bots_manage_add "12"
+set bots_manage_fill "12"
+set bots_manage_fill_spec "0"
+set bots_manage_fill_mode "0"
+set bots_manage_fill_kick "1"
+set bots_team "autoassign"
+set bots_team_amount "0"
+set bots_team_force "1"
+set bots_team_mode "0"
+set bots_skill "0"
+set bots_skill_axis_hard "0"
+set bots_skill_axis_med "0"
+set bots_skill_allies_hard "0"
+set bots_skill_allies_med "0"
+set bots_loadout_reasonable "1"
+set bots_loadout_allow_op "0"
