--- a/main/server.cfg
+++ b/main/server.cfg
@@ -300,3 +300,4 @@ set bots_skill_allies_hard "0"
 set bots_skill_allies_med "0"
 set bots_loadout_reasonable "1"
 set bots_loadout_allow_op "0"
+set bots_main_firstIsHost "0"
