--- a/main/server.cfg
+++ b/main/server.cfg
@@ -2,7 +2,7 @@
 // Color Codes
 //******************************************************************************
 // Colors for text. Do not clear the comment in front of the color codes.
-// Useful for your server name, motd msg's - Information and ref use only 
+// Useful for your server name, motd msgs - Information and ref use only 
 // 
 // ^1 = Red 
 // ^2 = Green
@@ -30,7 +30,6 @@ set scr_motd "^1Bot ^3War^5fare"
 // Common Server Settings
 //******************************************************************************
 // Password Settings
-set rcon_password "qazqaz"
 set sv_privatepassword ""
 set g_password ""
 set scr_xpscale_ "10"
@@ -250,7 +249,7 @@ set sv_maprotation "gametype dom map mp_dome"
 // Additional DVAR's
 //******************************************************************************
 // There are simply too many DVAR's for AGrcon to explicitly list and index 
-// for you. All additional DVAR's (such as weapon configs and player configs) are 
+// for you. All additional DVARs (such as weapon configs and player configs) are 
 // listed below.
 
 // WEAPONS / ATTACHMENTS
