--- a/main/server.cfg
+++ b/main/server.cfg
@@ -26,6 +26,8 @@ sets _modver ""
 sets _modupdate ""
 set scr_motd "^1Bot ^3War^5fare"
 
+set sv_maxclients "64"
+
 //******************************************************************************
 // Common Server Settings
 //******************************************************************************
